# ChangeLog for sys-libs/openipmi
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/openipmi/ChangeLog,v 1.30 2014/12/26 12:07:56 mgorny Exp $

*openipmi-2.0.18-r1 (26 Dec 2014)

  26 Dec 2014; Michał Górny <mgorny@gentoo.org> +openipmi-2.0.18-r1.ebuild:
  Convert to python-single-r1.

  29 Jan 2014; Jeroen Roovers <jer@gentoo.org> openipmi-2.0.18.ebuild:
  Stable for HPPA too.

  30 Oct 2013; Jeroen Roovers <jer@gentoo.org> openipmi-2.0.18.ebuild:
  Marked ~hppa too.

  19 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Re-assign to sysadmin herd.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> openipmi-1.3.18.ebuild,
  openipmi-1.4.12.ebuild, openipmi-1.4.14.ebuild, openipmi-1.4.28.ebuild,
  openipmi-2.0.11.ebuild, openipmi-2.0.16.ebuild, openipmi-2.0.16-r1.ebuild,
  openipmi-2.0.18.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*openipmi-2.0.18 (21 Feb 2012)

  21 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> +openipmi-2.0.18.ebuild:
  Version bump.

*openipmi-2.0.16-r1 (31 Oct 2010)

  31 Oct 2010; Andreas K. Huettel <dilfridge@gentoo.org>
  +openipmi-2.0.16-r1.ebuild, +files/openipmi-2.0.16-pthreads.patch:
  Added fix for bug 338499 (OpenIPMIpthread.pc depends on non-existing
  pthread.pc)

  16 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  openipmi-2.0.16.ebuild:
  Fix call to python_mod_optimize(). Call python_mod_cleanup().

  21 Feb 2010; Markos Chandras <hwoarang@gentoo.org> openipmi-2.0.16.ebuild:
  Stable on amd64 wrt bug #302396

  09 Feb 2010; Christian Faulhammer <fauli@gentoo.org>
  openipmi-2.0.16.ebuild:
  stable x86, bug 302396

  08 Feb 2010; nixnut <nixnut@gentoo.org> openipmi-2.0.16.ebuild:
  ppc stable #302396

  27 Jan 2010; Robin H. Johnson <robbat2@gentoo.org> openipmi-2.0.11.ebuild,
  openipmi-2.0.16.ebuild:
  Bug #298248: Upstream testsuite is broken.
