@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX openipmi-2.0.16-pthreads.patch 546 SHA256 1f40883f92842a1b3d634ed23294fc26ef4a78cd3906034ad7cdf9617331e2df SHA512 cadbcb8a1c08b467ca550e2b8510a415ca50749e752baf3fe8cc59c67c0d6bce0009850510e02d36b306894cb1e84aac3e4d2f947c75d56f8e7443315e4f8902 WHIRLPOOL af2650d00429ed02872549607090f87a42bd434f9a04fdbeadf79c8b725212a73662ba8c783f1576b53dd130ae14aa4e7fcd453c163537d1f8f1e72059a740ae
 DIST OpenIPMI-1.3.18.tar.gz 993450 SHA256 d30bd5fe601c2f34367678f5b5aadaa879f35024eed6a0a585b30099560ff4af
@@ -16,26 +16,26 @@ EBUILD openipmi-1.4.28.ebuild 1214 SHA256 3cb8f7e7dd2ef3fba1d90564c77d034785a649
 EBUILD openipmi-2.0.11.ebuild 1968 SHA256 7b7ac00ead29655fd9d179576cf8b7f1ac7572d295f32ebc7896a616bc81254d SHA512 e7fac07c87004cf868a0de7dd4b892e8b071e8fe1dd0941f1dc6f9ac984b45a86b8a2ba235af1451ca10d7e8a5c0d57e0529fe8e18ba33887023e46af1069835 WHIRLPOOL 35324c9c5250bae8f999b43de3a3e00fa6a6258c6e816ba5cc30ecb52ad540b8b627158dd55f23535752f5ce448adba68a39be4aaa8e1775b8282aac5012b405
 EBUILD openipmi-2.0.16-r1.ebuild 3029 SHA256 d715d8db81ea872811283346dbe5daf40475b8e0d88c549570e4376c0fcad24e SHA512 fd23b59ee406bdd6812138710945a028a4a44bd7a8030c629774ca38b8e4d97f97630ce88eeaf8ef0bbb2a4ffa82589f601a368ac63a3745f589b3a8e583b724 WHIRLPOOL 290ce8da5a6142f79d7a5d27f80e097f9b2d428c73be3ef0601a8fa1c1974ee79ad59c98add24c3864adec98d0f5bc30ff9d6d53372afdfd215bfd8989417049
 EBUILD openipmi-2.0.16.ebuild 2836 SHA256 6a0e371b7b222bf162ac3cb07f42b9c1e2376e1b971952c99d3879e19a52f57c SHA512 72b198061f27f8c4d5adff0b93e18a5b875673ab769875694a21f90122db5b9e1999fe70ca078047f727c6d575940cb4150f9d09bf4e3df6f79fd3801d992e55 WHIRLPOOL dfaf6ecf2ec71d940488aeab710681527d2de997fcc23c34d7e96654517433120c5389caaa5071350013b2572fdc8bafc6f905fa26f98a686311ac28e62c7c56
-EBUILD openipmi-2.0.18-r1.ebuild 2789 SHA256 cdadb668afcf13f45e0ebd288b2bb0898879e64e20fc89eb33465a9e023f9ade SHA512 e0bef1ab3dee9a757dee491f02039dfdaea7a86aa513b014230be354161561d4d0155cd095c9fab764f1c6ce314bc3797db0cf06ec2835d4622ea3ccf0829c4e WHIRLPOOL 306c349d34fbcbc91102cd8f6782718d68a1b8ccd9e276f169e9e999583c92837616bde51e7a36526e98774d6acc2c44d91dda910f28bec9df9698d65a74988e
+EBUILD openipmi-2.0.18-r1.ebuild 2796 SHA256 79cda53709baa95b22b8bcbf667ed1a86661628dbd080f231f3cb5e85160aa67 SHA512 7a8f2cf0473043e72af4a3acc302b3e0260c83d9373a2eb184c5077a3158c6e12a5d5855dd1fe5dbeb3e16597a6f77e9522a3c56f6d4aab34ea458fe8584d5ad WHIRLPOOL 357ce607943d611aa15c9dc1393ecbe6371f5f1850fe5e1e4db4e1e5950b8ccfa0a6afc850f2af192dcd0fa11148ee4ccbdf32aae196dab1e9ee028f39cdbab6
 EBUILD openipmi-2.0.18.ebuild 3033 SHA256 2be01acb6f72147ea0dc32dc0bd9f94630c1769f67c3161d7a8759af89a3d2b7 SHA512 aceefbdfefdacedf91edb7ab4ca7912db47b7c402b85f7f1d1adaafa5c41e096d6ce1e9eb157952e06193c1feead54fdb4d19aef18402d7ac780266d647070d8 WHIRLPOOL 638e893f1b7df0a4e96d5d3e19534fa29ec668aaf2160487578f25f21f8d0b7301335d05d8509521397fc573f8b94fb60de231ce040cca2a663e0045639d3a99
-MISC ChangeLog 4400 SHA256 ebffcfc68fde2be3d75bfdacc4fcd9bbc7c2252f9f7f45db7d15723fcce93ac3 SHA512 5e663171e71aadbed7be80ce2a47619e0765e870d0b1d76bd2f957e24c2f2698d1942c80f92b078dd132fa2dd6e21a9386f9cb9d390a96cb121bd59d3a71b712 WHIRLPOOL 03fb91c7de0227cff91d403db4c48943572089e8ff3fbfed90a8ac40e83f4bb8cb424a1a41f6ce4066ade3d3004f41f44616d60436002bb9bd921c44e2753642
+MISC ChangeLog 4495 SHA256 d97da90ef166daa7aff4c7428beb0a77a5755e8191d43764f413ae0a6bf682e0 SHA512 8098264b55523005a040eaf49d5d86baa87c443a995feeb28d223d85f07372dfac8bb41ebb34b4dc201889fd17aefdf86dbf887e3e007d31c0b7b13c76d29fdf WHIRLPOOL 6a18be84923e1ed7972f8e3743215d0c5adc09707025e2ef5892db795945f3cef1e3b22012ff414575075e8acac2c0627da496b0cd4905250461352e50e4eca5
 MISC metadata.xml 163 SHA256 a8aa48f63dab89c2af1f961029dea0ebf68a618dba59ac4661ea915dc85e18f0 SHA512 1744b806c2ddddbeee4d2b1e23c7f1ccf0d9427f679a65bd22cde617399d3a5bb30aada17ba5b648a3a46d9e1169b9d30ede4551fb8756dffc4e3e9306b199cf WHIRLPOOL b5af95c50999aaf066e6466928866baa34c6425459a580ab0712ba3e3ea518dc37a4082007043307ff169b1f8efe4f6a632d27d016b6fd307bf463cb47b78d55
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUnU+dXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOWHUQANWWkpwrmInzXEhQBO5T9+qe
-hma8aGicj3eDz4vixfipJ2rIvLv1el8feIK0o9akuhsPHyETVQCUB59O5eTPo5gH
-6n9DudBp+5UB5xpbmpoyvyBtZUPcl6NmyBGfbbtUYN8aTKdAFy4HXaC1bjXZciVM
-J+J5yb20sXUwWMzt1MchkIGXwq7ztgQtuRKKJ+SCQJwEpVeeRDv8GThkuv7bT6st
-TYtbmbIeoMe9xxDAETnLewx2/ooxiu3IL4TmDB8/R1AXhFRysRarqy7QLPlHbBzU
-Myi8hrBkCWbsjNq9LdYdLjOaQXsFGayiOReo2Q5jSQLGOLup3ebV9nix7koNJSIE
-/YjHrI3NihkhHcKTZ//CI1ez7DRTFRun3kKZ+SWfaS1E4sYCgdLBJrOOpNJKt9nx
-GcOgKBqLygKGHO+zac773ZTWO/bbj2ZtIj66luAHr3TsowWNfrCCgpAoNkqr5HG2
-yNgH3SEN9PXUM/7WF52/CGHeifZtOL9Jo816TarN7un0W69x0MTJ5eGY35eLK52c
-32F+pLs6AJiCXo4579FO2E257TeJMc8I/hx7rOWi+5fqFOrilAKTqY0ti0NFA6zG
-Cz4BxjIrX4lzKX+ASse1lol3zyqKL7jerFO8tA7RHmoi/Jcs3eyxZVJFXLofgKs6
-Od/sMrWfhjFYCa+NkCR1
-=LrTn
+iQJ8BAEBCgBmBQJVDDEPXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVir+WkP/A4jGv/GgB6QETfJ/0Bous4f
+uLvvmCPbXQbRtduC8W2Nbu4JSCKEfvcdDGaKC2sBsUwaJ7rh8sFTDbCSulh3Bv7/
+uu4TrMh5E7zRK/YUbNg98bZt+87n7yHb9BwXHh6bWQPsFNJwro9Eq88+npO1n6vj
+blJB/PWm3SAkpNf/xilZBqWW6HOwEe4qlvbN2bkJVg17Ly0oOPB+ERyBJ4oCQwKd
+XrHTmJieOwtX0OBfSUQMsl98Y9LiDMRXzVRNjFB6l77RC9tl7819DRJahfYZYF0f
+2kaogCwHL7wg0q4bztsyUv0ZDDs6Wygq9NxnoNXBBMHE+mDwFiz2fj2hIhQ7jw5x
+kn6v2FEVvZMvLWg6CeDQpD4gPuNWwydkAOnlSXXcwIn09dB87bAH9re7zm9WsyKm
+2I9uY2AVgIjWslAuM5LA3YWgdiHNQyh8rmZKBJQg2jipIKCLZ7rjCifqEp+ea0Jf
+BdLJHBrYVzjbV3G5SpkCctMnDFHtw0H5S6JuyYaCxBgkC+Ot4GQd5pr7gMZw7hXG
+qc+pXjxS5ha7uOhxs3PRw4ou6kVDO1XeHQT+Sd+u2jJ65XC4Kwkg4gUUp1SbDdIb
+BuB62hvQzHNhRvhqVMUxiXi7Z6exfO+MDMAzjiy91LE9LX/DybHeDoBGLvpIpC6A
+r4L1RnDtZIyozSk7XZGU
+=BFyA
 -----END PGP SIGNATURE-----
