@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/openipmi
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/openipmi/ChangeLog,v 1.30 2014/12/26 12:07:56 mgorny Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/openipmi/ChangeLog,v 1.31 2015/03/20 14:39:10 jlec Exp $
+
+  20 Mar 2015; Justin Lecher <jlec@gentoo.org> openipmi-2.0.18-r1.ebuild:
+  Fix tcl/tk slotting
 
 *openipmi-2.0.18-r1 (26 Dec 2014)
 
